--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 div {
-  border: 20px solid #000; /* this is short hand for setting 
+  border: 20px solid #000; /* this is short hand for setting
                             the border's width, its type, and color */
   display: inline-block; /* a way of positioning elements */
   min-width: 20em; /* the two min styles make the shape */
@@ -11,9 +11,9 @@ div {
 }
 
 #red {border-top-color: #f00}
-#orange {border-top-color: #f00}
-#yellow {border-top-color: #f00}
-#green {border-top-color: #f00}
-#blue {border-top-color: #f00}
-#indigo {border-top-color: #f00}
-#violet {border-top-color: #f00}
+#orange {border-top-color: #ffa500}
+#yellow {border-top-color: #ff0}
+#green {border-top-color: #00bc3f}
+#blue {border-top-color: #06f}
+#indigo {border-top-color: #8a2be2}
+#violet {border-top-color: #d300c9}
